# LearnWebGPU-Code

./: CMakeLists.txt  README.md  main.cpp  webgpu-utils.cpp
resources/: shader.wgsl  shader.wsl
webgpu/: webgpu.hpp
webgpu/cmake/: FetchDawn.cmake
